--- a/src/app/infomodal/infomodal.page.html
+++ b/src/app/infomodal/infomodal.page.html
@@ -31,7 +31,7 @@
 <div class="ion-text-center" style="margin-top: 20px;font-weight: bold;"><ion-label >Recent posts</ion-label></div>
 <ion-card>
     <ion-card-header>
-        <ion-chip (click)="infoModal(shop)">
+        <ion-chip (click)="infoModal('shop')">
           <ion-avatar><img src=""></ion-avatar>
           <ion-label>Quickmatt</ion-label>
         </ion-chip>
