--- a/src/app/postmodal/postmodal.page.html
+++ b/src/app/postmodal/postmodal.page.html
@@ -42,7 +42,7 @@
 <ion-footer>
   <ion-item>
     <ion-label (click)="actionSheet()">Add to your post</ion-label>
-    <ion-icon (click)="pickFile(image)" name="image" slot="end"></ion-icon>
-    <ion-icon (click)="pickFile(video)" name="videocam" slot="end"></ion-icon>
+    <ion-icon (click)="pickFile('image')" name="image" slot="end"></ion-icon>
+    <ion-icon (click)="pickFile('video')" name="videocam" slot="end"></ion-icon>
   </ion-item>
 </ion-footer>
