--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -96,8 +96,8 @@
     </ion-grid>
     
   </div>
-  <div *ngIf="verify">
-    <!--VERIFY PHONE NUMBER-->
+  <!-- <div *ngIf="verify">
+  
     <ion-card>
       <ion-card-header text-center>
         <ion-item>
@@ -128,6 +128,6 @@
 
       </ion-card-content>
     </ion-card>
-  </div>
+  </div> -->
   
 </ion-content>
