--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,12 +7,12 @@
       <ion-input (click)="openPostModal()" type="text" clearInput required [(ngModel)]="post" placeholder="Enter a new post"></ion-input>
     </ion-row>
     <ion-item class="ion-text-center">
-      <ion-buttons slot="start" (click)="pickFile(image)">
+      <ion-buttons slot="start" (click)="pickFile('image')">
       <ion-icon name="image"></ion-icon>&nbsp;&nbsp;
       <ion-label >Image</ion-label>
     </ion-buttons>
     <b style="margin-left: 45%;">|</b>
-      <ion-buttons slot="end" (click)="pickFile(video)">
+      <ion-buttons slot="end" (click)="pickFile('video')">
       <ion-icon name="videocam" ></ion-icon>&nbsp;&nbsp;
       <ion-label>video</ion-label>
     </ion-buttons>
@@ -23,7 +23,7 @@
 
   <ion-card >
     <ion-card-header>
-        <ion-chip (click)="infoModal(shop)">
+        <ion-chip (click)="infoModal('QuickMatt')">
           <ion-avatar><img src="../../assets/images/icon.png"></ion-avatar>
           <ion-label>QuickMatt</ion-label>
         </ion-chip>
@@ -66,7 +66,7 @@
   </ion-card>
   <ion-card >
     <ion-card-header>
-        <ion-chip (click)="infoModal(shop)">
+        <ion-chip (click)="infoModal('shop')">
           <ion-avatar><img src="../../assets/images/icon.png"></ion-avatar>
           <ion-label>QuickMatt</ion-label>
         </ion-chip>
