--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -16,7 +16,7 @@
 <div>
  <!--create list button-->
  <div style="text-align: center;margin-top: 200px;font-size: 0.9em;" (click)=scan() *ngIf="scanbutton">
- <ion-label class="ion-text-center">Tap to scan</ion-label><br><br><br>
+ <ion-label class="ion-text-center">Tap to scan and Verify</ion-label><br><br><br>
  
       <ion-col size="1" ><ion-icon  style="height: 80px;width: 80px;"name="qr-scanner" size="large" color="primary"></ion-icon></ion-col>
  
