--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,16 +1,14 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom" [hidden]="service.hiddenTabs">
+    <ion-tab-button tab="dashboard" class="tab">
+      <ion-icon name="home" ></ion-icon>
+      <ion-label>Dashboard</ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="tab1" class="tab">
       <ion-icon name="qr-scanner"></ion-icon>
       <ion-label>Scan</ion-label>
     </ion-tab-button>
-
-    <!-- <ion-tab-button tab="tab2">
-      <ion-icon name="chatbubbles"></ion-icon>
-      <ion-label>Chat</ion-label>
-    </ion-tab-button> -->
-
     <ion-tab-button tab="tab3" class="tab">
       <ion-icon name="card"></ion-icon>
       <ion-label>Soko</ion-label>
