--- a/src/app/products/products.page.scss
+++ b/src/app/products/products.page.scss
@@ -16,8 +16,8 @@ ion-slides {
     }
 }
 
-ion-spinner {
-    position: absolute;
-    top: 40%;
-    left: 45% ;
+.loader {
+    text-align: center;
+    margin-top: 40%;
 }
+
