--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom" [hidden]="service.hiddenTabs">
-    <ion-tab-button tab="dashboard" class="tab">
+    <ion-tab-button tab="dashboard" >
       <ion-icon name="home" ></ion-icon>
       <ion-label>Dashboard</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="tab1" class="tab">
+    <ion-tab-button tab="tab1" >
       <ion-icon name="qr-scanner"></ion-icon>
       <ion-label>Scan</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="tab3" class="tab">
+    <ion-tab-button tab="tab3" >
       <ion-icon name="card"></ion-icon>
       <ion-label>Soko</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="products" class="tab">
+    <ion-tab-button tab="products" >
       <ion-icon name="Add"></ion-icon>
       <ion-label>Products</ion-label>
     </ion-tab-button>
