--- a/src/app/products/products.page.html
+++ b/src/app/products/products.page.html
@@ -69,7 +69,7 @@
               <ion-label>{{file}}</ion-label>
               <ion-icon slot="end" name="camera" (click)="openCamera()"></ion-icon>
             </ion-item>
-            <ion-button expand="full "  type="submit" shape="round" [disabled]="ngForm != valid">Save</ion-button>
+            <ion-button expand="full "  type="submit" shape="round" [disabled]="productForm != valid">Save</ion-button>
           </ion-list>
         </form>
   </div>
