--- a/src/app/products/products.page.html
+++ b/src/app/products/products.page.html
@@ -37,7 +37,7 @@
               <ion-icon size="large" color="primary" name="arrow-round-back"></ion-icon>
             </ion-button>
         </ion-buttons>
-          <form  #productForm="ngForm" (ngSubmit)="addProduct()">
+          <form  #productForm=ngForm (ngSubmit)="addProduct()">
           <ion-list>
             <ion-item>
               <ion-input type="number" ([ngModel])="data.barcode" placeholder="scan barcode" required></ion-input>
@@ -69,7 +69,7 @@
               <ion-label>{{file}}</ion-label>
               <ion-icon slot="end" name="camera" (click)="openCamera()"></ion-icon>
             </ion-item>
-            <ion-button expand="full "  type="submit" shape="round" [disabled]="productForm != valid">Save</ion-button>
+            <ion-button expand="full "  type="submit" shape="round" [disabled]="!productForm.valid">Save</ion-button>
           </ion-list>
         </form>
   </div>
