--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -15,7 +15,7 @@
       <ion-row>
         <ion-col size="1"></ion-col>
         <ion-col class="center">
-            <h4 class="title" style="color: #3880ff;">
+            <h4 class="title" style="color: #00ade5;">
                 SIGN UP
               </h4>
           <form #registerForm=ngForm>
@@ -75,7 +75,7 @@
           <div class="form-group">
               <ion-button expand="block" shape="round" [disabled]="!registerForm.valid" (click)="register()" color="primary" width="70%">Sign Up</ion-button>
           </div>
-          <div class="form-group extra" style="color: #3880ff;">
+          <div class="form-group extra" style="color: #00ade5;">
             Have an account ?<br/><a routerLink="/tabs/login" class="link">Login</a>
           </div>
          <!--
