--- a/src/app/sokomodal/sokomodal.page.html
+++ b/src/app/sokomodal/sokomodal.page.html
@@ -1,4 +1,4 @@
-<ion-header style="background-color: #3880ff;">
+<ion-header style="background-color: #00ade5;">
   <ion-toolbar   >
     <ion-buttons (click)="close()" slot="start">
       <ion-icon color="primary"name="arrow-back" size="large"></ion-icon>
