--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,9 @@
         <ion-row text-center>
             <ion-col text-center *ngIf="shop.length > 0" style="color: white;">
               <ion-label  #name>{{shop[0].Shopname}}</ion-label><br>
-             <ion-label #email>{{shop[0].Email}}</ion-label>
+             <ion-label #email>{{email}}</ion-label>
             </ion-col>
-            <ion-col *ngIf="shop.length == 0">
+            <ion-col *ngIf="userID == null">
                 <ion-icon color="warning"name="warning"></ion-icon><br>
                 <a (click)="login()">Log in</a>
             </ion-col>
