--- a/src/app/infomodal/infomodal.page.html
+++ b/src/app/infomodal/infomodal.page.html
@@ -1,4 +1,4 @@
-<ion-header style="background-color: #3880ff;">
+<ion-header style="background-color: #00ade5;">
   <ion-toolbar color="primary" >
     <ion-buttons (click)="close()" slot="start">
       <ion-icon name="arrow-back" size="large"></ion-icon>
