--- a/src/app/notifications/notifications.page.html
+++ b/src/app/notifications/notifications.page.html
@@ -1,4 +1,4 @@
-<ion-header style="background-color: #3880ff;">
+<ion-header style="background-color: #00ade5;">
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
             <ion-menu-button autoHide="false"></ion-menu-button>
