--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,4 +1,4 @@
-<ion-header style="background-color: #3880ff">
+<ion-header style="background-color: #00ade5">
 
   <ion-toolbar color="primary" *ngIf="scanbutton" >
     <ion-buttons slot="start">
