--- a/src/app/products/products.page.html
+++ b/src/app/products/products.page.html
@@ -49,7 +49,7 @@
             <ion-item>
               <ion-label>Select Category </ion-label>
               <ion-select placeholder="Select Category" required  ([ngModel])="data.category" slot="end">
-                <ion-select-option *ngFor="let cat of categories">{{cat}}</ion-select-option>
+                <ion-select-option *ngFor="let cat of categories">{{cat.category}}</ion-select-option>
               </ion-select>
             </ion-item>
             <ion-item>
