--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -49,29 +49,12 @@
     <div  *ngIf="loader" text-center> 
       <ion-spinner class="loader" name="lines" color="primary"></ion-spinner> 
     </div>
-    <div *ngIf="Myorders.length == 0" style="padding-top: 50px;text-align: center;">
+    <div *ngIf="Myorders.length == 0" style="padding-top: 200px;text-align: center;">
       <ion-label color="medium">No Order is due Today</ion-label>
     </div>
       
       <div *ngIf="!loader" >
-        <div *ngIf="readyOrders.length > 0">
-          <!-- <ion-label color="medium" padding style="margin-top: 10px;">Ready Orders</ion-label> -->
-          <ion-card padding *ngFor="let item of readyOrders "  (click)="openOrder(item)" style="background-color: var(--ion-color-light);"> 
-            <ion-icon name="funnel" style="float: left;" color="primary"></ion-icon>&nbsp;<ion-label color="warning">Ready</ion-label>
-            <ion-label style="float: right;" color="primary">{{item.OrderID}}</ion-label><br><br>
-            <div style="text-align:start;">
-              Order for <ion-label *ngFor="let item of item.products">{{item.product}},</ion-label>
-            </div>
-            <span style="float: left;margin-top: 10px;">
-              {{item.username}}
-            </span>
-            <span style="float: right;bottom:0;margin-top: 10px;">
-              <!-- <span class="pick">Pick up :</span> {{item.Date.toDate() | date: 'mm'}} mins -->
-              <span class="pick">Pick up : {{item.pickHour}}:{{item.pickMins}} {{item.pickDay}}</span> 
-            </span>
-          </ion-card>
-        </div>
-          <ion-card padding *ngFor="let item of Myorders "  (click)="openOrder(item)" style="background-color:#ffff;"> 
+          <ion-card padding *ngFor="let item of Myorders "  (click)="openOrder(item)" style="background-color:white;"> 
             <ion-icon name="funnel" style="float: left;" color="primary"></ion-icon><ion-label style="float: right;" color="primary">{{item.OrderID}}</ion-label><br><br>
             <div style="text-align:start;">
               Order for {{item.products[0].product}}, {{item.products[1].product}},  ...
@@ -84,8 +67,25 @@
               <span class="pick">Pick up : {{item.pickHour}}:{{item.pickMins}} {{item.pickDay}}</span> 
             </span>
           </ion-card>
+          <div *ngIf="readyOrders.length > 0">
+            <ion-card padding *ngFor="let item of readyOrders "  (click)="openOrder(item)" style="background-color: #06b7f13d;"> 
+              <ion-icon name="funnel" style="float: left;" color="primary"></ion-icon>&nbsp;<ion-label color="success">Ready</ion-label>
+              <ion-label style="float: right;" color="primary">{{item.OrderID}}</ion-label><br><br>
+              <div style="text-align:start;">
+                Order for <ion-label *ngFor="let item of item.products">{{item.product}},</ion-label>
+              </div>
+              <span style="float: left;margin-top: 10px;">
+                {{item.username}}
+              </span>
+              <span style="float: right;bottom:0;margin-top: 10px;">
+                <!-- <span class="pick">Pick up :</span> {{item.Date.toDate() | date: 'mm'}} mins -->
+                <span class="pick">Pick up : {{item.pickHour}}:{{item.pickMins}} {{item.pickDay}}</span> 
+              </span>
+            </ion-card>
+          </div>
       </div>
   </div>
+  <div style="background-color: var(--ion-color-light);height: 100%;" *ngIf="Myorders.length == 0">
 
-
+  </div>
 </ion-content>
