--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -30,7 +30,8 @@ ion-card{
 .body{
     border-radius: 20px 20px 0px 0px;
     background-color: var(--ion-color-light); 
-    height: 10000px;
     margin-bottom: 0px;
     padding-top: 20px;
+    padding-bottom: 50px;
+    
 }
